<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <LinearLayout
        android:id="@+id/task_list_main"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        >

        <ExpandableListView
            android:id="@+id/task_list_expandable_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >

        </ExpandableListView>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:background="#ff694937"
            android:gravity="center_vertical"
            >
            <Button
                android:id="@+id/open_group_detail_tasklist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:text="@string/open_task_detail_button"
                />
            <Button
                android:id="@+id/complete_task_button_tasklist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="100dp"
                android:layout_alignParentEnd="true"
                android:layout_toStartOf="@+id/create_task_button_tasklist"
                android:text="@string/task_complete_button"
                />
            <Button
                android:id="@+id/create_task_button_tasklist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_alignParentEnd="true"
                android:text="@string/task_add_button"
                android:visibility="gone"
                />
        </RelativeLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/task_list_waiting_group_accept"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#5588dd"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/task_list_waiting_group_accept_text"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/task_list_waiting_user_accept"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#dd8855"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            android:id="@+id/task_list_user_accept_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            />

        <Button
            android:id="@+id/task_list_user_accept_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/task_list_waiting_user_accept_text"
            />

    </LinearLayout>
</FrameLayout>