<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fccpc.taskmanagerprototype.Main.TaskCreateFragment"
    android:orientation="vertical"
    android:layout_margin="20dp"
    >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="4"
        >

        <!--title-->
        <TextView
            android:text="@string/task_create_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            />
        <EditText
            android:id="@+id/task_create_input_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="title"
            android:inputType="text"
            android:layout_column="1"
            android:layout_row="0"
            />

        <!--deadline-->
        <TextView
            android:text="@string/task_create_deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            />

        <EditText
            android:id="@+id/task_create_input_deadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:layout_column="1"
            android:layout_row="2"
            />

        <!--content-->
        <TextView
            android:text="@string/task_create_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            />
        <EditText
            android:id="@+id/task_create_input_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="content"
            android:inputType="textMultiLine"
            android:layout_column="1"
            android:layout_row="3"
            />

    </GridLayout>

    <!--button-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/cancel_button_taskcreate"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:text="キャンセル"
            />
        <Button
            android:id="@+id/create_task_button_taskcreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:text="create"
            />
    </LinearLayout>

</LinearLayout>