<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fccpc.taskmanagerprototype.Main.TaskCreateFragment"
    android:orientation="vertical"
    android:layout_margin="20dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            >
            <!--title-->
            <TextView
                android:text="@string/task_detail_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/abc_text_size_title_material"
                />
            <TextView
                android:id="@+id/task_detail_input_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_marginStart="40dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:textSize="@dimen/abc_text_size_title_material"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            >
            <!--deadline-->
            <TextView
                android:text="@string/task_detail_deadline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:orientation="horizontal"
                android:layout_marginStart="40dp"
                >
                <TextView
                    android:id="@+id/task_detail_input_deadline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:id="@+id/task_detail_input_remindertime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            >

            <!--content-->
            <TextView
                android:text="@string/task_detail_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/abc_text_size_medium_material"
                />

            <ScrollView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_weight="4"
                android:layout_marginStart="40dp"
                android:fadeScrollbars="false"
                >
                <TextView
                    android:id="@+id/task_detail_input_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/abc_text_size_medium_material"
                    />
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            >
            <!-- finished user list-->
            <TextView
                android:text="@string/task_detail_finished_user_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                />
            <TextView
                android:id="@+id/task_detail_input_finished_user_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_marginStart="40dp"
                />

        </LinearLayout>

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#dddddd"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>


    <!-- boarditem -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="#22abdd">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="#ffffff"
                android:layout_alignParentTop="true"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="0dp"
                >
                <EditText
                    android:id="@+id/task_detail_add_board_item_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/task_detail_comment_hint"
                    android:background="#ffffff"
                    />
                <Button
                    android:id="@+id/task_detail_add_board_item_button"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="+"
                    android:background="#dddddd"
                    >
                </Button>
            </LinearLayout>

            <ListView
                android:id="@+id/task_detail_board_listview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                >
            </ListView>

        </RelativeLayout>

    </LinearLayout>



    <!--button-->
    <Button
        android:id="@+id/ok_button_taskdetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:text="戻る"
        />

</LinearLayout>